# llm-zoomcamp

./: .gitignore  pyproject.toml
01-agentic-rag/code/: HW1.ipynb  rag_helper.py  sqlite-ingest.ipynb  sqlite-retrieval.ipynb
02-vector-search/code/: HW2.ipynb  faq.db-shm  faq.db-wal
02-vector-search/code/llm-zoomcamp-onnx/: onnx_.ipynb  pyproject.toml
03-orchestration/flows/: 1_chat_without_rag.yaml  2_chat_with_rag.yaml  3_rag_with_websearch.yaml  4_simple_agent.yaml  5_web_research_agent.yaml  6_multi_agent_research.yaml
cohorts/2026/03-orchestration/: homework_solution.md
